# ORB_SLAM2_comment

./: CMakeLists.txt  alghorithms.docx  build.sh  euroc-CameraTrajectory文件分析.txt  framework.eddx  kitii-CameraTrajectory文件分析.txt  关于orb-slam的编译说明.txt
Examples/Stereo/: stereo_euroc.cc
include/: Frame.h  FrameDrawer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  PnPsolver.h  Sim3Solver.h  Tracking.h  Viewer.h
src/: Converter.cc  Frame.cc  FrameDrawer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc
